+++++++++++
Python News
+++++++++++

What's New in Python 3.3.1
==========================

*Release date: XX-XX-XXXX*

Core and Builtins
-----------------

- Issue #15801: Make sure mappings passed to '%' formatting are actually
  subscriptable.

Library
-------

Extension Modules
-----------------

Tests
-----

Build
-----

Documentation
-------------

- Issue #11964: Document a change in v3.2 to the behavior of the indent
  parameter of json encoding operations.

Tools/Demos
-----------


What's New in Python 3.3.0 Release Candidate 2?
===============================================

*Release date: XX-Sep-2012*

Core and Builtins
-----------------

- Issue #15784: Modify OSError.__str__() to better distinguish between
  errno error numbers and Windows error numbers.

- Issue #15781: Fix two small race conditions in import's module locking.

Library
-------

- Issue #10650: Deprecate the watchexp parameter of the Decimal.quantize()
  method.

- Issue #15785: Modify window.get_wch() API of the curses module: return
  a character for most keys, and an integer for special keys, instead of
  always returning an integer. So it is now possible to distinguish special
  keys like keypad keys.


What's New in Python 3.3.0 Release Candidate 1?
===============================================

*Release date: 25-Aug-2012*

Core and Builtins
-----------------

- Issue #15573: memoryview comparisons are now performed by value with full
  support for any valid struct module format definition.

- Issue #15316: When an item in the fromlist for __import__ doesn't exist,
  don't raise an error, but if an exception is raised as part of an import do
  let that propagate.

- Issue #15778: ensure that str(ImportError(msg)) returns a str
  even when msg isn't a str.

- Issue #2051: Source file permission bits are once again correctly
  copied to the cached bytecode file. (The migration to importlib
  reintroduced this problem because these was no regression test. A test